--- a/client/package.json
+++ b/client/package.json
@@ -3,7 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@devexpress/dx-react-chart": "^2.7.4",
+    "@devexpress/dx-react-chart-material-ui": "^2.7.4",
+    "@devexpress/dx-react-core": "^2.7.4",
+    "@material-ui/core": "^4.11.3",
     "react": "16.11.0",
+    "react-charts": "^2.0.0-beta.7",
     "react-dom": "16.11.0",
     "react-scripts": "3.2.0",
     "web3": "1.2.2"
