--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "@material-ui/core": "^4.11.3",
     "react": "16.11.0",
     "react-charts": "^2.0.0-beta.7",
+    "react-countdown": "^2.3.1",
     "react-dom": "16.11.0",
     "react-scripts": "3.2.0",
     "web3": "1.2.2"
